dark mode fixes

--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -269,7 +269,6 @@ Navbar brand
 }
 
 .navbar-brand-image {
-  display: block;
   height: $navbar-brand-image-height;
   width: auto;
 }
