--- a/src/scss/ui/_cards.scss
+++ b/src/scss/ui/_cards.scss
@@ -54,8 +54,8 @@
 }
 
 .card-stamp-icon {
-  background: $text-muted;
-  color: $white;
+  background: var(--#{$prefix}muted);
+  color: var(--#{$prefix}card-bg);
   display: flex;
   align-items: center;
   justify-content: center;
